Edge collapse button fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -566,6 +566,7 @@ figure {
 
 //Collapse button
 .collapse {
+  z-index: 10;
   @include large {
     position: absolute;
     top: 65px;
